--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
   },
   "dependencies": {
     "core-js": "^2.6.5",
+    "showdown": "^1.9.0",
     "vue": "^2.6.10",
+    "vue-markdown": "^2.2.4",
     "vuetify": "^1.5.5"
   },
   "devDependencies": {
