--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "showdown": "^1.9.0",
     "vue": "^2.6.10",
     "vue-markdown": "^2.2.4",
-    "vuetify": "^1.5.5"
+    "vuetify": "^1.5.5",
+    "vuex": "^3.1.1"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.9.0",
