--- a/package.json
+++ b/package.json
@@ -9,6 +9,13 @@
   },
   "dependencies": {
     "core-js": "^2.6.5",
+    "eslint-config-promise": "^2.0.2",
+    "eslint-config-standard": "^12.0.0",
+    "eslint-plugin-import": "^2.18.0",
+    "eslint-plugin-node": "^9.1.0",
+    "eslint-plugin-promise": "^4.2.1",
+    "eslint-plugin-standard": "^4.0.0",
+    "eslint-plugin-vue-libs": "^4.0.0",
     "showdown": "^1.9.0",
     "vue": "^2.6.10",
     "vue-markdown": "^2.2.4",
